Created Flask routes for Concept subpages (concept1.1.html, concept1.2.html); imported images and media layout for concept.1.1 and 1.2)

--- a/templates/concepts-about/concept3.html
+++ b/templates/concepts-about/concept3.html
@@ -8,11 +8,11 @@
     <script src="https://code.jquery.com/ui/1.12.0/jquery-ui.min.js"></script>  
     <script type="text/javascript" src="{{ url_for('static', filename = 'homepage.js') }}"></script>
 
-    <link rel="stylesheet" href="../static/main.css">
+    <link rel="stylesheet" href="../static/css/home.css">
     <link rel="stylesheet" href="http://code.jquery.com/ui/1.12.1/themes/base/jquery-ui.css">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.2.1/css/bootstrap.min.css">
     
-    <title>Concept 1: Command Position</title>
+    <title>Concept 3: Chi</title>
 </head>
 <body>
     <!--Include the navbar using Flask-->
