--- a/templates/concepts-about/concept1.html
+++ b/templates/concepts-about/concept1.html
@@ -8,11 +8,11 @@
     <script src="https://code.jquery.com/ui/1.12.0/jquery-ui.min.js"></script>  
     <script type="text/javascript" src="{{ url_for('static', filename = 'homepage.js') }}"></script>
 
-    <link rel="stylesheet" href="../static/main.css">
+    <link rel="stylesheet" href="../static/css/home.css">
     <link rel="stylesheet" href="http://code.jquery.com/ui/1.12.1/themes/base/jquery-ui.css">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.2.1/css/bootstrap.min.css">
     
-    <title>Concept 3: Chi</title>
+    <title>Concept 1: Command Position</title>
 </head>
 <body>
     <!--Include the navbar using Flask-->
@@ -20,6 +20,7 @@
     
     <h2>{{ concept.header}} </h2>
     <p>{{ concept.text}} </p>
+    <button onclick="window.location.href='/concept1-1'">Start Learning</button>
 
 </body>
 </html>
