--- a/templates/concepts-about/concept2.html
+++ b/templates/concepts-about/concept2.html
@@ -8,7 +8,7 @@
     <script src="https://code.jquery.com/ui/1.12.0/jquery-ui.min.js"></script>  
     <script type="text/javascript" src="{{ url_for('static', filename = 'homepage.js') }}"></script>
 
-    <link rel="stylesheet" href="../static/main.css">
+    <link rel="stylesheet" href="../static/css/home.css">
     <link rel="stylesheet" href="http://code.jquery.com/ui/1.12.1/themes/base/jquery-ui.css">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.2.1/css/bootstrap.min.css">
     
