--- a/static/css/main.css
+++ b/static/css/main.css
@@ -1,51 +1,93 @@
-#good-bed{
-    width: 100px;
-    height: 150px;
-    border: 6px #83a29d solid;
-    border-radius: 5px;
+/* This is a common style css */
+
+.spectral-regular {
+  font-family: "Spectral", serif;
+  font-weight: 400;
+  font-style: normal;
 }
 
-#bad-bed{
-    width: 100px;
-    height: 150px;
-    margin-left: 50px;
-    border: 6px #cc0000 solid;
-    border-radius: 5px;
+.examples-header {
+  font-size: 32px;
+  margin-left: 20px;
+  margin-bottom: 15px;
 }
 
-#room{
-    background-color: #dbd6d3ff;
-    border-radius: 5px;
-    height: 400px; 
-    width: 600px;
-    margin-top: 30px;
+#good-bed {
+  width: 100px;
+  height: 150px;
+  border: 6px #83a29d solid;
+  border-radius: 5px;
 }
 
-.row{
-    height: 33%;
+#bad-bed {
+  width: 100px;
+  height: 150px;
+  margin-left: 50px;
+  border: 6px #cc0000 solid;
+  border-radius: 5px;
 }
 
-#door{
-    margin-top: 15px;
-    margin-left: 50px;
-    width: 60px;
-    height: 120px
+#room {
+  background-color: #dbd6d3ff;
+  border-radius: 5px;
+  height: 400px;
+  width: 600px;
+  margin-top: 30px;
 }
 
-#window{
-    background-color: #84735eff;
-    margin-left: -15px;
-    color: white;
-    height: 100px;
+.correct-drop {
+  border: 3px solid #83a29d !important;
 }
 
-.text-bubble{
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    background-color: #ede2d7ff;
-    margin-top: 50%;
-    width: 80%;
-    height: 200px;
-    border-radius: 20px;
+.incorrect-drop {
+  border: 3px solid #e06666 !important;
+}
+
+.try-button {
+  margin-left: 255px;
+  padding: 2px 8px;
+  background-color: #e06666;
+  color: #ffffff;
+  border-radius: 5px;
+  border-color: transparent;
+}
+
+.next-button {
+  margin-left: 220px;
+  padding: 4px 10px;
+  background-color: #19676b;
+  color: #ffffff;
+  border-radius: 5px;
+  border-color: transparent;
+}
+
+.row {
+  height: 33%;
+}
+
+#door {
+  margin-top: 15px;
+  margin-left: 50px;
+  width: 60px;
+  height: 120px;
+}
+
+#window {
+  background-color: #84735eff;
+  margin-left: -15px;
+  color: white;
+  height: 100px;
+}
+
+.text-bubble {
+  text-align: center;
+  padding: 20px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  background-color: #ede2d7ff;
+  margin-top: 30%;
+  width: 90%;
+  height: 160px;
+  border-radius: 20px;
 }
