--- a/templates/concepts-about/concept3.html
+++ b/templates/concepts-about/concept3.html
@@ -1,25 +1,39 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    
+  <head>
+    <meta charset="utf-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
+
+    <!-- Link to the common CSS file -->
+    <link rel="stylesheet" href="../static/css/common.css" />
+
+    <!-- Your existing script and stylesheet links -->
     <script src="http://code.jquery.com/jquery-3.3.1.min.js"></script>
-    <script src="https://code.jquery.com/ui/1.12.0/jquery-ui.min.js"></script>  
-    <script type="text/javascript" src="{{ url_for('static', filename = 'homepage.js') }}"></script>
+    <script src="https://code.jquery.com/ui/1.12.0/jquery-ui.min.js"></script>
 
-    <link rel="stylesheet" href="../static/css/home.css">
-    <link rel="stylesheet" href="http://code.jquery.com/ui/1.12.1/themes/base/jquery-ui.css">
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.2.1/css/bootstrap.min.css">
-    
+    <link rel="stylesheet" href="../static/css/home.css" />
+    <link
+      rel="stylesheet"
+      href="http://code.jquery.com/ui/1.12.1/themes/base/jquery-ui.css"
+    />
+    <link
+      rel="stylesheet"
+      href="https://stackpath.bootstrapcdn.com/bootstrap/4.2.1/css/bootstrap.min.css"
+    />
+
     <title>Concept 3: Chi</title>
-</head>
-<body>
+  </head>
+  <body>
     <!--Include the navbar using Flask-->
-    {% include 'navbar.html' %} 
-    
-    <h2>{{ concept.header}} </h2>
-    <p>{{ concept.text}} </p>
-
-</body>
+    {% include 'navbar.html' %}
+    <div class="container">
+      <div class="row">
+        <div class="col-md-12">
+          <h2>{{ concept.header }}</h2>
+          <p>{{ concept.text }}</p>
+          <button onclick="window.location.href='/concept3-1'">Continue</button>
+        </div>
+      </div>
+    </div>
+  </body>
 </html>
