--- a/templates/concepts-about/concept4.html
+++ b/templates/concepts-about/concept4.html
@@ -1,25 +1,29 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    
+  <head>
+    <meta charset="utf-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
+
     <script src="http://code.jquery.com/jquery-3.3.1.min.js"></script>
-    <script src="https://code.jquery.com/ui/1.12.0/jquery-ui.min.js"></script>  
-    <script type="text/javascript" src="{{ url_for('static', filename = 'homepage.js') }}"></script>
+    <script src="https://code.jquery.com/ui/1.12.0/jquery-ui.min.js"></script>
 
-    <link rel="stylesheet" href="../static/css/home.css">
-    <link rel="stylesheet" href="http://code.jquery.com/ui/1.12.1/themes/base/jquery-ui.css">
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.2.1/css/bootstrap.min.css">
-    
+    <link rel="stylesheet" href="../static/css/home.css" />
+    <link
+      rel="stylesheet"
+      href="http://code.jquery.com/ui/1.12.1/themes/base/jquery-ui.css"
+    />
+    <link
+      rel="stylesheet"
+      href="https://stackpath.bootstrapcdn.com/bootstrap/4.2.1/css/bootstrap.min.css"
+    />
+
     <title>Concept 4: Earth Element</title>
-</head>
-<body>
+  </head>
+  <body>
     <!--Include the navbar using Flask-->
-    {% include 'navbar.html' %} 
-    
-    <h2>{{ concept.header}} </h2>
-    <p>{{ concept.text}} </p>
+    {% include 'navbar.html' %}
 
-</body>
+    <h2>{{ concept.header}}</h2>
+    <p>{{ concept.text}}</p>
+  </body>
 </html>
