--- a/templates/home.html
+++ b/templates/home.html
@@ -1,29 +1,41 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    
+  <head>
+    <meta charset="utf-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
+
     <script src="http://code.jquery.com/jquery-3.3.1.min.js"></script>
-    <script src="https://code.jquery.com/ui/1.12.0/jquery-ui.min.js"></script>  
-    <script type="text/javascript" src="{{ url_for('static', filename = 'homepage.js') }}"></script>
+    <script src="https://code.jquery.com/ui/1.12.0/jquery-ui.min.js"></script>
+    <script
+      type="text/javascript"
+      src="{{ url_for('static', filename = 'homepage.js') }}"
+    ></script>
 
-    <link rel="stylesheet" href="../static/css/home.css">
-    <link rel="stylesheet" href="http://code.jquery.com/ui/1.12.1/themes/base/jquery-ui.css">
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.2.1/css/bootstrap.min.css">
-    
+    <link rel="stylesheet" href="../static/css/home.css" />
+    <link
+      rel="stylesheet"
+      href="http://code.jquery.com/ui/1.12.1/themes/base/jquery-ui.css"
+    />
+    <link
+      rel="stylesheet"
+      href="https://stackpath.bootstrapcdn.com/bootstrap/4.2.1/css/bootstrap.min.css"
+    />
     <title>Homepage</title>
-</head>
-<body>
+  </head>
+  <body>
     <!--Include the navbar using Flask-->
-    {% include 'navbar.html' %} 
-    
-    <div class="container">
-        <h1>Feng Shui</h1>
-        <p>Basic feng shui principles to spruce up your bedroom!</p>
-        <button onclick="window.location.href='/learn'">Start Learning</button>
-        <p>By Salia Nahshal, Michaela Gary & Ellie Yan</p>
-    </div>
+    {% include 'navbar.html' %}
 
-</body>
+    <div class="container">
+      <div class="content">
+        <h3 id="feng-shui-chinese">风水</h3>
+        <h1 id="feng-shui-header">Feng Shui</h1>
+        <p>Basic feng shui principles to spruce up your bedroom!</p>
+        <button class="learn-button" onclick="window.location.href='/learn'">
+          Start Learning
+        </button>
+        <p class="authors">By Salia Nahshal, Michaela Gary & Ellie Yan</p>
+      </div>
+    </div>
+  </body>
 </html>
