--- a/templates/navbar.html
+++ b/templates/navbar.html
@@ -1,36 +1,57 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    
-    <script src="http://code.jquery.com/jquery-3.3.1.min.js"></script>
-    <script src="https://code.jquery.com/ui/1.12.0/jquery-ui.min.js"></script>  
-    <script type="text/javascript" src="{{ url_for('static', filename = 'homepage.js') }}"></script>
+    <meta charset="utf-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
 
-    <link rel="stylesheet" href="../static/css/navbar.css">
-    <link rel="stylesheet" href="http://code.jquery.com/ui/1.12.1/themes/base/jquery-ui.css">
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.2.1/css/bootstrap.min.css">
+    <script src="http://code.jquery.com/jquery-3.3.1.min.js"></script>
+    <script src="https://code.jquery.com/ui/1.12.0/jquery-ui.min.js"></script>
+    <script
+      type="text/javascript"
+      src="{{ url_for('static', filename = 'homepage.js') }}"
+    ></script>
+
+    <link rel="stylesheet" href="../static/css/navbar.css" />
+    <link
+      rel="stylesheet"
+      href="http://code.jquery.com/ui/1.12.1/themes/base/jquery-ui.css"
+    />
+    <link
+      rel="stylesheet"
+      href="https://stackpath.bootstrapcdn.com/bootstrap/4.2.1/css/bootstrap.min.css"
+    />
+
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Spectral&display=swap"
+      rel="stylesheet"
+    />
     <title>Feng Shui Nav Bar</title>
   </head>
-  
+
   <body>
-    <div class="container">
-        <div class="row">
-            <div class="col-md-4">
-                <p>Feng Shui<p>
-            </div>
-            <div class="col-md-4"></div>
-            <div class="col-md-4">
-                <a href="/home">Home</a>
-                <a href="/learn">Learn</a>
-                <a href="/quiz">Quiz</a>
-            </div>
+    <div class="container spectral-regular">
+      <div class="navbar">
+        <div class="navbar-brand">Feng Shui | 风水</div>
+        <div class="navbar-links">
+          <a href="/home">Home</a>
+          <a href="/learn">Learn</a>
+          <a href="/quiz">Quiz</a>
         </div>
+      </div>
+      <hr />
     </div>
+
+    <script>
+      $(document).ready(function () {
+        var path = window.location.pathname;
+        $(".navbar-links a").each(function () {
+          if ($(this).attr("href") === path) {
+            $(this).addClass("active-page");
+          }
+        });
+      });
+    </script>
   </body>
 </html>
-
-
-
-
