--- a/templates/concept1/concept1.3.html
+++ b/templates/concept1/concept1.3.html
@@ -35,16 +35,16 @@
 
       <div class="row">
         <div class="col-md-8" id="command-ex">
-          <img src="{{ url_for('static', filename='images/com-ex2.png') }}" />
+          <img src="{{ url_for('static', filename='images/com-ex3.png') }}" />
         </div>
 
         <div class="col-md-4" style="border: black 1px solid">
           <div class="text-bubble">
-            Second, the bed should not be directly in line with the door because it's believed that you will absorb any bad energy or luck entering through the door when sleeping.
+            Also, avoid “coffin position” where the feet of the bed are facing the door. This resembles how we carry the dead in a coffin.
           </div>
-          <button onclick="window.location.href='/concept1-1'">Prev</button>
+          <button onclick="window.location.href='/concept1-2'">Prev</button>
           <button
-            onclick="window.location.href='/concept1-3'"
+            onclick="window.location.href='/concept1-4'"
             class="btn-next mt-3">Next</button>
         </div>
       </div>
