--- a/templates/concept1/concept1.1.html
+++ b/templates/concept1/concept1.1.html
@@ -8,7 +8,7 @@
     <script src="https://code.jquery.com/ui/1.12.0/jquery-ui.min.js"></script>
 
     <link rel="stylesheet" href="../static/css/main.css" />
-
+    <link rel="stylesheet" href="../static/css/concept1.css" />
     <link
       rel="stylesheet"
       href="http://code.jquery.com/ui/1.12.1/themes/base/jquery-ui.css"
@@ -18,56 +18,36 @@
       href="https://stackpath.bootstrapcdn.com/bootstrap/4.2.1/css/bootstrap.min.css"
     />
 
+    <link
+      href="https://fonts.googleapis.com/css2?family=Spectral&display=swap"
+      rel="stylesheet"
+    />
     <title>Concept 1: Command Position</title>
   </head>
   <body>
     <!--Include the navbar using Flask-->
     {% include 'navbar.html' %}
 
-    <div class="container">
+    <div class="container spectral-regular">
       <div class="row">
-        <h1>Example of bed in command position</h1>
+        <h1 class="examples-header">Example of Command Position</h1>
       </div>
 
       <div class="row">
-        <div class="col-md-8" id="room">
-          <div class="row">
-            <div class="col-md-4"></div>
-            <div class="col-md-4"></div>
-            <div class="col-md-4">
-              <img
-                src="{{ url_for('static', filename='images/bed.png') }}"
-                id="good-bed"
-              />
-            </div>
-          </div>
-          <div class="row">
-            <div class="col-md-4">
-              <img
-                src="{{ url_for('static', filename='images/window.png') }}"
-                id="window"
-              />
-            </div>
-            <div class="col-md-4"></div>
-            <div class="col-md-4"></div>
-          </div>
-          <div class="row">
-            <div class="col-md-4">
-              <img
-                src="{{ url_for('static', filename='images/door.png') }}"
-                id="door"
-              />
-            </div>
-            <div class="col-md-4"></div>
-            <div class="col-md-4"></div>
-          </div>
+        <div class="col-md-8" id="command-ex">
+          <img src="{{ url_for('static', filename='images/com-ex1.png') }}" />
         </div>
 
         <div class="col-md-4" style="border: black 1px solid">
           <div class="text-bubble">
-            First, when on the bed, one should have a view of the room and door.
+            First, when on the bed, one should have a clear view of the room and door, which allows you to quickly see any threats or dangers entering the room, creating a sense of safety and security.
           </div>
-          <button onclick="window.location.href='/concept1-2'">Next</button>
+          <button
+            onclick="window.location.href='/concept1-2'"
+            class="btn-next mt-3"
+          >
+            Next
+          </button>
         </div>
       </div>
     </div>
