--- a/templates/concepts-about/concept3.html
+++ b/templates/concepts-about/concept3.html
@@ -26,7 +26,7 @@
   <body>
     <!--Include the navbar using Flask-->
     {% include 'navbar.html' %}
-    <div class="container">
+    <div class="container spectral-regular">
       <div class="row">
         <div class="col-md-12">
           <h2>{{ concept.header }}</h2>
