--- a/templates/navbar.html
+++ b/templates/navbar.html
@@ -33,11 +33,11 @@
   <body>
     <div class="container spectral-regular">
       <div class="navbar">
-        <div class="navbar-brand">Feng Shui | 风水</div>
+        <div class="navbar-brand"><a href="/home" style="color: black">Feng Shui</a></div>
         <div class="navbar-links">
           <a href="/home">Home</a>
           <a href="/learn">Learn</a>
-          <a href="/quiz">Quiz</a>
+          <a href="/quiz0">Quiz</a>
         </div>
       </div>
       <hr />
