rug images, quiz text & columns

--- a/templates/quizzes/quiz4.html
+++ b/templates/quizzes/quiz4.html
@@ -29,13 +29,27 @@
     <!--Include the navbar using Flask-->
     {% include 'navbar.html' %}
 
-    <!-- <div class="container spectral-regular">
-      <div class="row">
-        <h1 class="examples-header">Move the <b>bed</b> to <b>command position</b> and <b>symmetry</b>.
-        </h1>
-      </div>
+    <div class="container spectral-regular">
+        <div class="row">
+            <h1 class="examples-header">
+                Fourth, select the <b>best rug</b> to place under the bed.
+            </h1>
+        </div>
 
-      <div class="row">
+        <div class="row">
+            <div class="col-3">
+                
+            </div>
+            <div class="col-3">
+
+            </div>
+            <div class="col-3">
+
+            </div>
+        </div>
+    </div>
+
+      <!--<div class="row">
 
         <div class="col-md-8" id="command-ex">
             <div class="row">
