--- a/templates/quizzes/quiz5.html
+++ b/templates/quizzes/quiz5.html
@@ -29,6 +29,26 @@
     <!--Include the navbar using Flask-->
     {% include 'navbar.html' %}
 
+    <div class="container spectral-regular">
+        <div class="row">
+            <h1 class="examples-header">
+                Fifth, select the <b>best pottery</b> for bedroom decor.
+            </h1>
+        </div>
+
+        <div class="row">
+            <div class="col-3">
+                
+            </div>
+            <div class="col-3">
+
+            </div>
+            <div class="col-3">
+
+            </div>
+        </div>
+    </div>
+
     <!-- <div class="container spectral-regular">
       <div class="row">
         <h1 class="examples-header">Move the <b>bed</b> to <b>command position</b> and <b>symmetry</b>.
