images, text, & buttons for quizzes 4 & 5

--- a/templates/quizzes/quiz4.html
+++ b/templates/quizzes/quiz4.html
@@ -38,13 +38,25 @@
 
         <div class="row">
             <div class="col-3">
-                
+                <img src="{{ url_for('static', filename='images/polyester-rug.png') }}" height="300" width ="240"/>
+                <br>
+                <b>Polyester Rug</b>
+                <br>
+                <button>Select</button>
             </div>
             <div class="col-3">
-
+                <img src="{{ url_for('static', filename='images/cotton-rug.png') }}" height="300" width ="240"/>
+                <br>
+                <b>Cotton Rug</b>
+                <br>
+                <button>Select</button>
             </div>
             <div class="col-3">
-
+                <img src="{{ url_for('static', filename='images/fiber-rug.png') }}" height="300" width ="240"/>
+                <br>
+                <b>Plant Fiber Rug</b>
+                <br>
+                <button>Select</button>
             </div>
         </div>
     </div>
