--- a/templates/quizzes/quiz5.html
+++ b/templates/quizzes/quiz5.html
@@ -38,13 +38,25 @@
 
         <div class="row">
             <div class="col-3">
-                
+                <img src="{{ url_for('static', filename='images/clay-vase.png') }}" height="260" width ="200"/>
+                <br>
+                <b>Clay Vase</b>
+                <br>
+                <button>Select</button>
             </div>
             <div class="col-3">
-
+                <img src="{{ url_for('static', filename='images/brass-vase.png') }}" height="260" width ="200"/>
+                <br>
+                <b>Brass Vase</b>
+                <br>
+                <button>Select</button>
             </div>
             <div class="col-3">
-
+                <img src="{{ url_for('static', filename='images/steel-vase.png') }}" height="260" width ="200"/>
+                <br>
+                <b>Steel Vase</b>
+                <br>
+                <button>Select</button>
             </div>
         </div>
     </div>
