--- a/templates/quizzes/quiz4.html
+++ b/templates/quizzes/quiz4.html
@@ -9,7 +9,7 @@
     <script src="{{ url_for('static', filename='scripts/quiz4.js') }}"></script>
 
     <link rel="stylesheet" href="../static/css/main.css" />
-    <link rel="stylesheet" href="../static/css/quiz1.css" />
+    <link rel="stylesheet" href="../static/css/quiz4.css" />
     <link
       rel="stylesheet"
       href="http://code.jquery.com/ui/1.12.1/themes/base/jquery-ui.css"
@@ -38,60 +38,33 @@
 
         <div class="row">
             <div class="col-3">
-                <img src="{{ url_for('static', filename='images/polyester-rug.png') }}" height="300" width ="240"/>
+                <img id="polyester-rug" src="{{ url_for('static', filename='images/polyester-rug.png') }}" height="300" width ="240"/>
                 <br>
                 <b>Polyester Rug</b>
                 <br>
-                <button>Select</button>
+                <button id="select-polyester">Select</button>
             </div>
             <div class="col-3">
-                <img src="{{ url_for('static', filename='images/cotton-rug.png') }}" height="300" width ="240"/>
+                <img id="cotton-rug" src="{{ url_for('static', filename='images/cotton-rug.png') }}" height="300" width ="240"/>
                 <br>
                 <b>Cotton Rug</b>
                 <br>
-                <button>Select</button>
+                <button id="select-cotton">Select</button>
             </div>
             <div class="col-3">
-                <img src="{{ url_for('static', filename='images/fiber-rug.png') }}" height="300" width ="240"/>
+                <img id="fiber-rug" src="{{ url_for('static', filename='images/fiber-rug.png') }}" height="300" width ="240"/>
                 <br>
                 <b>Plant Fiber Rug</b>
                 <br>
-                <button>Select</button>
+                <button id="select-fiber">Select</button>
             </div>
+            <div class="col-3" id="feedback-column">
+                <div class="text-bubble3" style="display: none;" id="feedback-message"></div>
+                <br>
+                <button id="try-again-button" class="try-button" style="display: none;">Try Again</button>
+                <button id="next-question-button" class="next-button" style="display: none;" onclick="window.location.href='quiz5';">Next ></button>
+            </div>                    
         </div>
     </div>
-
-      <!--<div class="row">
-
-        <div class="col-md-8" id="command-ex">
-            <div class="row">
-                <img src="{{ url_for('static', filename='images/quiz1.png') }}"/>
-            </div>
-            <div class="row">
-                
-                <div class="col-md-4">
-                    <div class="droppable incorrect-div1"></div>
-                    <div class="droppable correct-div"></div>
-                </div>
-                <div class="col-md-4">
-                    <div class="droppable incorrect-div2"></div>
-                </div>
-                <div class="col-md-4"></div>
-            </div>   
-            
-                
-            
-        </div>
-
-        <div class="col-md-4">
-            <div class="text-center">
-                <img src="{{ url_for('static', filename='images/quiz-bed.png') }}" class="draggable bed-img">
-            </div>
-            <div class="text-center text-bubble3">Drag and drop the bed to the command position.</div>
-            <button id="next-question-button" class="next-button" style="display: none; margin-top: 10px;">Next Question</button>
-            <button id="try-again-button" class="try-button" style="display: none; margin-top: 10px"> Try again </button>
-        </div>
-      </div>
-    </div> -->
   </body>
 </html>
