quiz 4 done done (button format issues)

--- a/templates/quizzes/quiz4.html
+++ b/templates/quizzes/quiz4.html
@@ -60,8 +60,7 @@
             </div>
             <div class="col-3" id="feedback-column">
                 <div class="text-bubble3" style="display: none;" id="feedback-message"></div>
-                <br>
-                <button id="try-again-button" class="try-button" style="display: none;">Try Again</button>
+                <button id="try-again-button" class="try-button" style="display: none;" onclick="location.reload();">Try Again</button>
                 <button id="next-question-button" class="next-button" style="display: none;" onclick="window.location.href='quiz5';">Next ></button>
             </div>                    
         </div>
