--- a/static/css/home.css
+++ b/static/css/home.css
@@ -9,6 +9,15 @@
   font-family: "Spectral", serif;
 }
 
+.homepage-banner{
+  background-color: #dbd6d3ff; 
+  display: flex; 
+  flex-direction: vertical; 
+  align-items: center; 
+  justify-items: center;
+  padding: 50px;
+}
+
 .content {
   text-align: center;
   margin-bottom: 50px;
@@ -25,8 +34,8 @@
 }
 
 .learn-button {
-  background-color: #cfb7a1;
-  color: #fff;
+  background-color: white;
+  color: black;
   border: none;
   border-radius: 10px;
   padding: 15px 30px;
@@ -36,7 +45,8 @@
 }
 
 .learn-button:hover {
-  background-color: #a28e79;
+  /*box-shadow: #cfb7a1ff 3px solid;*/
+  box-shadow: 2px 2px 10px #cfb7a1ff;
 }
 
 .authors {
