--- a/static/css/concept1.css
+++ b/static/css/concept1.css
@@ -32,3 +32,27 @@
   width: 150px;
   margin-bottom: 50px;
 }
+
+.center{
+  display: flex; 
+  flex-direction: column; 
+  align-items: center
+}
+
+p{
+  font-size: 20px;
+}
+
+button {
+  font-size: 20px;
+  background-color: #cfb7a1ff;
+  color: white;
+  padding: 10px 20px 10px 20px;
+  border: none;
+  border-radius: 10px !important; 
+}
+
+button:hover {
+  cursor: pointer;
+  border: solid 3px #84735eff;
+}
