--- a/templates/concepts-about/concept1.html
+++ b/templates/concepts-about/concept1.html
@@ -8,6 +8,7 @@
     <script src="https://code.jquery.com/ui/1.12.0/jquery-ui.min.js"></script>
 
     <link rel="stylesheet" href="../static/css/main.css" />
+    <link rel="stylesheet" href="../static/css/concept1.css" />
     <link
       rel="stylesheet"
       href="http://code.jquery.com/ui/1.12.1/themes/base/jquery-ui.css"
@@ -25,13 +26,30 @@
     <div class="container spectral-regular">
       <div class="row">
         <div class="col-md-12">
-          <h2>{{ concept.header}}</h2>
+          <h2 style="padding: 10px">{{ concept.header}}</h2>
+        </div>
+      </div>
+
+      <div class="row">
+        <div class="col-md-2"></div>
+        <div class="col-md-8 center">
+          <img src="{{ url_for('static', filename='images/command-1.png') }}" style="width:400px; margin-top: 30px"/>
+        </div>
+        <div class="col-md-2"></div>
+      </div>
+
+      <div class="row center">
+        <div class="col-md-3"></div>
+        <div class="col-md-6 d-flex justify-content-end" style="margin-top: 30px">
           <p>{{ concept.text}}</p>
+        </div>
+        <div class="col-md-3 d-flex justify-content-end" style="margin-left: 200px">
           <button onclick="window.location.href='/concept1-1'">
-            Start Learning
+            Next
           </button>
         </div>
       </div>
+
     </div>
   </body>
 </html>
