updated concept2 about page

--- a/templates/concept2/concept2.1.html
+++ b/templates/concept2/concept2.1.html
@@ -38,7 +38,7 @@
           <img src="{{ url_for('static', filename='images/sym-ex1.png') }}" />
         </div>
 
-        <div class="col-md-4" style="border: black 1px solid">
+        <div class="col-md-4">
           <div class="text-bubble">
             To attain symmetry, have objects in pairs (e.g. nightstands) on each
             side of the bed.
