--- a/static/css/concept2.css
+++ b/static/css/concept2.css
@@ -30,3 +30,27 @@
   height: 100px;
   border-radius: 20px;
 }
+
+.txt {
+  margin-top: -5%;
+}
+
+p {
+  font-size: 20px;
+  margin-right: 20px;
+  margin-top: -5% !important;
+}
+
+button {
+  font-size: 20px;
+  background-color: #cfb7a1ff;
+  color: white;
+  padding: 10px 20px 10px 20px;
+  border: none;
+  border-radius: 10px !important;
+}
+
+button:hover {
+  cursor: pointer;
+  border: solid 3px #84735eff;
+}
