--- a/templates/concepts-about/concept2.html
+++ b/templates/concepts-about/concept2.html
@@ -7,7 +7,8 @@
     <script src="http://code.jquery.com/jquery-3.3.1.min.js"></script>
     <script src="https://code.jquery.com/ui/1.12.0/jquery-ui.min.js"></script>
 
-    <link rel="stylesheet" href="../static/css/home.css" />
+    <link rel="stylesheet" href="../static/css/main.css" />
+    <link rel="stylesheet" href="../static/css/concept2.css" />
     <link
       rel="stylesheet"
       href="http://code.jquery.com/ui/1.12.1/themes/base/jquery-ui.css"
@@ -16,18 +17,47 @@
       rel="stylesheet"
       href="https://stackpath.bootstrapcdn.com/bootstrap/4.2.1/css/bootstrap.min.css"
     />
-
-    <title>Concept 3: Chi</title>
+    <title>Concept 2: Symmetry</title>
   </head>
   <body>
     <!--Include the navbar using Flask-->
     {% include 'navbar.html' %}
+
     <div class="container spectral-regular">
       <div class="row">
-        <div class="col-md-12">
+        <div class="col-md-12" style="padding: 0px 20px 0px; margin: 0%">
           <h2>{{ concept.header }}</h2>
+        </div>
+      </div>
+
+      <div class="row">
+        <div class="col-md-2"></div>
+        <div class="col-md-8">
+          <img
+            src="{{ url_for('static', filename='images/sym-ex1.png') }}"
+            style="width: 700px; height: auto"
+          />
+        </div>
+        <div class="col-md-2"></div>
+      </div>
+
+      <div class="row">
+        <div class="col-md-3"></div>
+        <div class="col-md-6">
           <p>{{ concept.text }}</p>
-          <button onclick="window.location.href='/concept2-1'">Continue</button>
+        </div>
+        <div class="col-md-3"></div>
+      </div>
+
+      <div class="row">
+        <div class="col-md-6"></div>
+        <div class="col-md-6">
+          <button
+            onclick="window.location.href='/concept2-1'"
+            style="margin-left: 160px"
+          >
+            Next
+          </button>
         </div>
       </div>
     </div>
