added sketches for symmetry

--- a/templates/concept2/concept2.2.html
+++ b/templates/concept2/concept2.2.html
@@ -35,7 +35,7 @@
           <img src="{{ url_for('static', filename='images/sym-ex2.png') }}" />
         </div>
 
-        <div class="col-md-4" style="border: black 1px solid">
+        <div class="col-md-4">
           <div class="text-bubble">
             The nightstands do not have to be identical, but complementary, for
             a feeling of balance and equality.
