--- a/templates/concept2/concept2.3.html
+++ b/templates/concept2/concept2.3.html
@@ -35,7 +35,7 @@
           <img src="{{ url_for('static', filename='images/sym-ex3.png') }}" />
         </div>
 
-        <div class="col-md-4" style="border: black 1px solid">
+        <div class="col-md-4">
           <div class="text-bubble">
             Leave equal room on both sides of the bed for equal access and
             harmony for two partners.
