--- a/templates/concept2/concept2.4.html
+++ b/templates/concept2/concept2.4.html
@@ -35,7 +35,7 @@
           <img src="{{ url_for('static', filename='images/sym-ex4.png') }}" />
         </div>
 
-        <div class="col-md-4" style="border: black 1px solid">
+        <div class="col-md-4">
           <div class="text-bubble">
             Avoid mixing different items – this disrupts the balance and harmony
             of the space.
