--- a/templates/concepts-about/concept1.html
+++ b/templates/concepts-about/concept1.html
@@ -44,9 +44,7 @@
           <p>{{ concept.text}}</p>
         </div>
         <div class="col-md-3 d-flex justify-content-end" style="margin-left: 200px">
-          <button onclick="window.location.href='/concept1-1'">
-            Next
-          </button>
+          <button onclick="window.location.href='/concept1-1'">Next ></button>
         </div>
       </div>
 
