--- a/templates/quizzes/quiz1.html
+++ b/templates/quizzes/quiz1.html
@@ -31,7 +31,7 @@
 
     <div class="container spectral-regular">
       <div class="row">
-        <h1 class="examples-header">Move the <b>bed</b> to <b>command position</b> and <b>symmetry</b>.
+        <h1 class="examples-header">First, move the bed to <b>(1) command position</b> and <b>(2) allows for symmetry</b> of bedside furniture.
         </h1>
       </div>
 
@@ -39,7 +39,7 @@
 
         <div class="col-md-8" id="command-ex">
             <div class="row">
-                <img src="{{ url_for('static', filename='images/quiz1.png') }}"/>
+                <img src="{{ url_for('static', filename='images/quiz1.png') }}" style="width: 600px; margin-left: 100px"/>
             </div>
             <div class="row">
                 
@@ -59,7 +59,7 @@
 
         <div class="col-md-4">
             <div class="text-center">
-                <img src="{{ url_for('static', filename='images/quiz-bed.png') }}" class="draggable bed-img">
+                <img src="{{ url_for('static', filename='images/bed2.png') }}" class="draggable bed-img" style="width: 150px">
             </div>
             <div class="text-center text-bubble3">Drag and drop the bed to the command position.</div>
             <button id="next-question-button" class="next-button" style="display: none; margin-top: 10px;">Next Question</button>
