--- a/templates/quizzes/quiz2.html
+++ b/templates/quizzes/quiz2.html
@@ -9,6 +9,7 @@
 
     <link rel="stylesheet" href="../static/css/main.css" />
     <link rel="stylesheet" href="../static/css/concept2.css" />
+    <link rel="stylesheet" href="../static/css/quiz2.css" />
 
     <link
       rel="stylesheet"
@@ -27,12 +28,12 @@
 
     <div class="container spectral-regular">
       <div class="row">
-        <h1 class="examples-header">Second, select complementary nightstands to achieve symmetry.
+        <h1 class="examples-header">Second, move the <b>nightstands</b> for <b>symmetry and balance</b> in the bedroom.
         </h1>
       </div>
       <div class="row">
         <div class="col-md-8" id="symmetry-ex1">
-          <div id="zoomed-room" style="background-color: #decab8ff">
+          <div >
             <div class="row">
               <div class="col-md-4">
                 <div class="row">
@@ -45,11 +46,10 @@
                   <div class="col-md-2"></div>
                 </div>
               </div>
-              <div class="col-md-4">
+              <div class="col-md-4" style="width: 800px">
                 <img
-                  src="{{ url_for('static', filename='images/quiz-bed.png') }}"
-                  id="normal-bed"
-                  class="draggable"
+                  src="{{ url_for('static', filename='images/quiz2.png') }}"
+                  style="width: 700px"
                 />
               </div>
               <div class="col-md-4">
