about page complete

--- a/templates/navbar.html
+++ b/templates/navbar.html
@@ -36,6 +36,7 @@
         <div class="navbar-brand"><a href="/home" style="color: black">Feng Shui</a></div>
         <div class="navbar-links">
           <a href="/home">Home</a>
+          <a href="/about">About</a>
           <a href="/learn">Learn</a>
           <a href="/quiz0">Quiz</a>
         </div>
