--- a/templates/about.html
+++ b/templates/about.html
@@ -33,11 +33,11 @@
             <h2 style="padding: 10px">Origin of Feng Shui</h2>
           </div>
         </div>
-        <div class="row center" style="margin-left: 15px; margin-right: 15px">
+        <div class="row center" style="margin-left: 240px; margin-right: 240px">
             <p>Feng Shui, which translates to "wind and water" in English, is an ancient Chinese practice that dates back thousands of years. Its origins can be traced back to the ancient Chinese art of divination known as "kanyu" (堪輿), which means "looking at the land." This early form of Feng Shui was used to find auspicious locations for burials, dwellings, and other structures.</p>
             <p>Over time, Feng Shui evolved into a more comprehensive system that integrated Taoist and Confucian principles. The practice became more structured and began to incorporate concepts such as yin and yang, the five elements (wood, fire, earth, metal, water), and the Bagua (an octagonal grid used to analyze the energy of a space).</p>
-            <div class="col-md-3 d-flex justify-content-end" style="margin-left: 800px">
-                <button onclick="window.location.href='/learn'">Next: Principles</button>
+            <div class="col-md-3 d-flex justify-content-end" style="margin-left: 500px">
+                <button onclick="window.location.href='/learn'">Learn More</button>
               </div>
           </div>
     </div>
