title alignment fix

--- a/templates/about.html
+++ b/templates/about.html
@@ -26,7 +26,7 @@
     <div class="container spectral-regular">
         <div class="row">
           <div class="col-md-12">
-            <h2 style="padding: 10px">Origin of Feng Shui</h2>
+            <h2 style="margin-left: 240px; padding: 10px">Origin of Feng Shui</h2>
           </div>
         </div>
         <div class="row center" style="margin-left: 240px; margin-right: 240px">
