--- a/templates/concepts-about/concept4.html
+++ b/templates/concepts-about/concept4.html
@@ -31,7 +31,7 @@
     <div class="container spectral-regular">
       <div class="row">
         <div class="col-md-12">
-          <h2 style="padding: 10px">{{ concept.header }}</h2>
+          <h2 style="margin-left: 240px; padding: 10px">{{ concept.header }}</h2>
         </div>
       </div>
 
