--- a/templates/home.html
+++ b/templates/home.html
@@ -42,7 +42,7 @@
           <h3  style="margin-bottom: -30px">Start Learning</h3>
           <div class="row">
             <div class="col-md-12" style="margin-bottom: -100px; margin-left: 10px">
-                <button class="learn-button" onclick="window.location.href='/learn'">
+                <button class="learn-button" onclick="window.location.href='/about'">
                   <img src="{{ url_for('static', filename='images/about-home.png') }}" style="width:100px;"/>
                   <br>
                   About</button>
