--- a/templates/concept4/concept4.3.html
+++ b/templates/concept4/concept4.3.html
@@ -38,7 +38,7 @@
       <div class="row">
         <div class="col-md-2"></div>
         <div class="col-md-8 center">
-          <img src="{{ url_for('static', filename='images/earth-4.png') }}" style="width:600px; margin-top: 0px"/>
+          <img src="{{ url_for('static', filename='images/earth-4.png') }}" style="width:600px"/>
           <br>
         </div>
         <div class="col-md-2"></div>
